--- a/style.css
+++ b/style.css
@@ -1,52 +1,90 @@
-  body {
-    margin: 0;
-    font-size: 18px;
-    color: #333;
-    font-family: sans-serif;
-    line-height: 1.5;
-  }
+@font-face {
+  font-weight: 400;
+  font-family: "Roboto Mono";
+  src: url("../assets/fonts/RobotoMono-Regular.woff2") format("woff2");
+}
 
-  h1 {
-    margin-top: 50px;
-    margin-bottom: 10px;
-    font-size: 60px;
-    text-align: center;
-  }
-  
-  h2 { 
-    margin-top: 0;
-    padding-bottom: 30px;
-    font-size: 25px;
-    text-align: center;
-    border-bottom: 2px solid #e3e3e3;
-  }
-  
-  main {
-    width: 900px;
-    margin: auto;
-  }
-  
-  section {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    margin-left: 0;
-    margin-right: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-  
-  section h2 {
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-    text-align: left;
-    border: none;
-  }
-  
-  li {
-    margin-bottom: 10px;
-  } 
-  
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+
+  font-family: "Roboto Mono", monospace;
+
+  background: #333131;
+}
+
+p {
+  margin: 5px 0;
+}
+
+/* BEGIN (write your solution here) */
+.calculation {
+  width: 300px;
+  background: #2c3e50;
+  font-family: "Roboto Mono", monospace;
+}
+
+.result {
+  padding: 30px;
+  color: white;
+  background: #505c68;
+  text-align: right;
+}
+
+.buttons {
+  height: 75px;
+  font-size: 1.2em;
+  cursor: pointer;
+}
+
+button {
+  background: none;
+  border: none;
+  font-size: 1em;
+  color: white;
+  cursor: pointer;
+}
+
+table {
+  border-collapse: collapse;
+  width: 300px;
+  height: 75px;
+}
+
+td {
+  text-align: center;
+  width: 75px;
+  padding: 0;
+}
+
+tr td:last-child {
+  background-color: #3498db;
+}
+tr td:hover {
+  background: #364c63;
+}
+/* END */
+
+.small {
+  font-size: 80%;
+}
+
+.bg-blue {
+  background: #3498db;
+}
+
+.bg-blue:hover {
+  background: #67b2e4;
+}
+
+.text-big {
+  font-size: 3em;
+}
+
+.text-gray {
+  color: #ced4d9;
+}
